[gd_scene load_steps=5 format=3 uid="uid://bkfdcvbsr1tcp"]

[ext_resource type="Script" uid="uid://cmuex4vid7rha" path="res://control_panel.gd" id="1_avyx1"]
[ext_resource type="Texture2D" uid="uid://c6k1u4aqu7fp5" path="res://assets/christmas-wallpaper.jpg" id="2_f5hji"]
[ext_resource type="Theme" uid="uid://cs3o5746fd4tl" path="res://control_panel.tres" id="3_1x1sv"]
[ext_resource type="Script" uid="uid://iw0xtb6o2iuq" path="res://player_name.gd" id="4_ewo2d"]

[node name="ControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avyx1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -76.0
offset_right = 1.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f5hji")

[node name="Vox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Vox"]
layout_mode = 2
theme = ExtResource("3_1x1sv")
text = "Operation: Santa's List
Control Panel"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="ControlButtons" type="Panel" parent="Vox"]
custom_minimum_size = Vector2(518, 382)
layout_mode = 2
theme = ExtResource("3_1x1sv")

[node name="VBoxContainer" type="VBoxContainer" parent="Vox/ControlButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 22.0
offset_right = -29.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadNaughty" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
theme_type_variation = &"RedButton"
text = "Load Naughty List"

[node name="LoadNice" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
text = "Load Nice List"

[node name="ToggleVaultDoor" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
theme_type_variation = &"RedButton"
text = "Toggle Vault Door"

[node name="OpenListWindow" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
text = "Open List Window"

[node name="ResetList" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
theme_type_variation = &"RedButton"
text = "Reset List"

[node name="CloseListWindow" type="Button" parent="Vox/ControlButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1x1sv")
text = "Close List Window"

[node name="PlayerList" type="Panel" parent="Vox"]
custom_minimum_size = Vector2(518, 240)
layout_mode = 2
theme = ExtResource("3_1x1sv")

[node name="TextEdit" type="LineEdit" parent="Vox/PlayerList"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -93.0
offset_right = 184.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1x1sv")
placeholder_text = "Enter Player Name..."
alignment = 1

[node name="Button" type="Button" parent="Vox/PlayerList"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -25.0
offset_right = 75.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Add Player"

[node name="Label" type="Label" parent="Vox/PlayerList"]
layout_mode = 0
offset_left = 3.0
offset_top = 135.0
offset_right = 651.0
offset_bottom = 183.0
theme = ExtResource("3_1x1sv")
theme_override_font_sizes/font_size = 34
text = "Current player name is:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="Vox/PlayerList"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 51.0
offset_right = 324.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "NOT SELECTED"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_ewo2d")

[node name="StateViewer" type="Panel" parent="Vox"]
custom_minimum_size = Vector2(518, 147)
layout_mode = 2
theme = ExtResource("3_1x1sv")

[node name="Top" type="Label" parent="Vox/StateViewer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_top = 16.0
offset_right = 324.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 34
text = "Current State:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentStateLabel" type="Label" parent="Vox/StateViewer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -87.0
offset_right = 324.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
text = "NONE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/LoadNaughty" to="." method="change_state" binds= ["NAUGHTY"]]
[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/LoadNice" to="." method="change_state" binds= ["NICE"]]
[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/ToggleVaultDoor" to="." method="_toggle_vault_door"]
[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/OpenListWindow" to="." method="_open_list_window"]
[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/ResetList" to="." method="reset_list"]
[connection signal="pressed" from="Vox/ControlButtons/VBoxContainer/CloseListWindow" to="." method="close_list_window"]
[connection signal="gui_input" from="Vox/PlayerList/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="pressed" from="Vox/PlayerList/Button" to="." method="update_player"]
[connection signal="resized" from="Vox/PlayerList/PlayerName" to="Vox/PlayerList/PlayerName" method="_on_resized"]
